<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back3"
    tools:context="pt.isec.a21220683.minesweeper.Views.Setting.Settings">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="top">

        <TextView
            android:text="@string/nome_jogador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/introduza_o_seu_nome"
            android:textColor="@android:color/white"
            android:ems="10"
            android:id="@+id/edtNomeJogador" />


        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:id="@+id/foto"
            android:layout_gravity="center"
            android:background="@drawable/perfil"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnFoto"
            android:text="@string/mudar_foto"
            android:layout_gravity="center"
            android:onClick="mudarFoto"/>

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:text="@string/guardar"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:text="@string/creditos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnCreditos"
            android:layout_gravity="bottom"/>
    </LinearLayout>

</LinearLayout>
